<resources>
    <string name="app_name">Redcard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_referral">Referral Gift</string>
    <string name="title_activity_verify_email">Verify Email</string>

    <!--Component strings-->
    <string name="leagues">Leagues</string>
    <string name="national_teams">National Teams</string>
    <string name="copy_referral_string">Copy Referral</string>
    <string name="referral_string">Referral:</string>
    <string name="congratulations_string">Congratulations!</string>
    <string name="referral_explanation_string">After you create an account, you\'ll receive a bonus for being referred
        by other user.
    </string>
    <string name="email_verification_string">Verify your account by clicking on the link in the email sent to the email
        specified.
    </string>
    <string name="email_sent_string">Email sent to %1$s</string>
    <string name="resend_string">Resend</string>
    <string name="continue_string">Continue</string>
    <string name="delete_account_string">Delete account</string>
</resources>
