<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".controller.activities.VerifyEmailActivity" android:id="@+id/verify_email_layout">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@android:drawable/ic_dialog_email"
            android:id="@+id/email_image" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            android:contentDescription="@string/title_activity_verify_email"/>
    <TextView
            android:text="@string/email_sent_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/email_sent_to_text" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/email_image" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textStyle="bold" android:textSize="18sp"/>
    <TextView
            android:text="@string/email_verification_string"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/email_verification_text"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/email_sent_to_text"/>
    <Button
            android:text="@string/resend_string"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:id="@+id/resend_button" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/email_verification_text"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/continue_button"/>
    <Button
            android:text="@string/continue_string"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:id="@+id/continue_button" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/email_verification_text" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/resend_button"
            app:layout_constraintHorizontal_bias="0.5"/>
</android.support.constraint.ConstraintLayout>