<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/app_bar_profile"
        tools:context=".controller.activities.ProfileActivity" android:id="@+id/profile_layout">

    <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp" tools:src="@tools:sample/avatars"
            android:id="@+id/user_avatar_image" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:srcCompat="@mipmap/ic_launcher"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/username_text" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toEndOf="@+id/user_avatar_image"
            android:layout_marginStart="8dp" android:textSize="24sp" android:textStyle="bold"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/email_text" app:layout_constraintStart_toEndOf="@+id/user_avatar_image"
            android:layout_marginStart="8dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/username_text" android:textStyle="italic"/>
    <TextView
            android:text="Balance:"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/user_balance_text"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/user_avatar_image"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/user_balance_value" app:layout_constraintStart_toEndOf="@+id/user_balance_text"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/user_balance_text"
            app:layout_constraintBottom_toBottomOf="@+id/user_balance_text"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/referral_text" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/user_balance_text" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:textSize="24sp" android:text="@string/referral_string"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/referral_value" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/referral_text"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"/>
    <Button
            android:text="@string/copy_referral_string"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:id="@+id/copy_referral_button"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.52" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/referral_value"/>
    <TextView
            android:text="@string/delete_account_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/delete_account_text" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="11dp"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="@android:color/holo_red_light"/>
</android.support.constraint.ConstraintLayout>